[FIX] Display the Swift Logo on small-width Devices

--- a/assets/stylesheets/_mobile.scss
+++ b/assets/stylesheets/_mobile.scss
@@ -36,7 +36,6 @@
       padding: 0;
 
       a {
-        width: auto;
         margin: 0 auto;
       }
     }
